--- a/MyDirectXLib/Project1/Project1.vcxproj
+++ b/MyDirectXLib/Project1/Project1.vcxproj
@@ -167,6 +167,7 @@
     <ClCompile Include="Source\Component\Physics\BoxCollder2D.cpp" />
     <ClCompile Include="Source\Component\Graphics\SpriteRenderer.cpp" />
     <ClCompile Include="Source\Component\Physics\AbstractCollider3D.cpp" />
+    <ClCompile Include="Source\Component\Test\SimpleMove.cpp" />
     <ClCompile Include="Source\Component\Transform.cpp" />
     <ClCompile Include="Source\Device\Base\MeshVertex.cpp" />
     <ClCompile Include="Source\Device\Buffer\ConstantBuffer.cpp" />
@@ -246,6 +247,8 @@
     <ClInclude Include="Source\Component\Graphics\SpriteRenderer.h" />
     <ClInclude Include="Source\Component\Physics\AbstractCollider3D.h" />
     <ClInclude Include="Source\Component\Physics\SphereCollider3D.h" />
+    <ClInclude Include="Source\Component\Test\MetaBallRenderer.h" />
+    <ClInclude Include="Source\Component\Test\SimpleMove.h" />
     <ClInclude Include="Source\Component\Transform.h" />
     <ClInclude Include="Source\Device\Base\MeshVertex.h" />
     <ClInclude Include="Source\Device\Buffer\ConstantBuffer.h" />
@@ -334,6 +337,10 @@
     <FxCompile Include="Assets\Shaders\MeshVS.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
+    </FxCompile>
+    <FxCompile Include="Assets\Shaders\MetaBallPS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
     </FxCompile>
     <FxCompile Include="Assets\Shaders\SpritePS.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
