--- a/MyDirectXLib/Project1/Project1.vcxproj.filters
+++ b/MyDirectXLib/Project1/Project1.vcxproj.filters
@@ -79,6 +79,7 @@
     <ClCompile Include="Source\Component\Graphics\CustomRenderer2D.cpp" />
     <ClCompile Include="Source\Actor\Test\TestSplat.cpp" />
     <ClCompile Include="Source\Component\Graphics\PostEffect\MetaBallRenderer.cpp" />
+    <ClCompile Include="Source\Component\Graphics\PostEffect\SplashMask.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Scene\AbstractScene.h" />
@@ -179,6 +180,7 @@
     <ClInclude Include="Source\Actor\Test\TestSplat.h" />
     <ClInclude Include="Source\Component\Graphics\PostEffect\IPostEffectRenderer.h" />
     <ClInclude Include="Source\Component\Graphics\PostEffect\MetaBallRenderer.h" />
+    <ClInclude Include="Source\Component\Graphics\PostEffect\SplashMask.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Shaders\SpritePS.hlsl" />
@@ -190,5 +192,6 @@
     <FxCompile Include="Assets\Shaders\WaterFallGame\BasicVS.hlsl" />
     <FxCompile Include="Assets\Shaders\WaterFallGame\CircleFillPS.hlsl" />
     <FxCompile Include="Assets\Shaders\WaterFallGame\CircleGradPS.hlsl" />
+    <FxCompile Include="Assets\Shaders\WaterFallGame\SplashPS.hlsl" />
   </ItemGroup>
 </Project>
