--- a/MyDirectXLib/Project1/Project1.vcxproj
+++ b/MyDirectXLib/Project1/Project1.vcxproj
@@ -161,6 +161,8 @@
     <ClCompile Include="Source\Actor\Test\Tester.cpp" />
     <ClCompile Include="Source\Actor\Test\TestSplat.cpp" />
     <ClCompile Include="Source\Actor\Test\TestSplatNode.cpp" />
+    <ClCompile Include="Source\Actor\Test\WaterDrop.cpp" />
+    <ClCompile Include="Source\Actor\Test\WaterDrop2.cpp" />
     <ClCompile Include="Source\Component\Audio\AudioSource.cpp" />
     <ClCompile Include="Source\Component\Graphics\CustomRenderer2D.cpp" />
     <ClCompile Include="Source\Component\Graphics\MeshRenderer.cpp" />
@@ -249,6 +251,11 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Source\Actor\Test\WaterDrop.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Source\Actor\Test\WaterDrop2.h" />
     <ClInclude Include="Source\Component\Audio\AudioSource.h" />
     <ClInclude Include="Source\Component\Graphics\CustomRenderer2D.h" />
     <ClInclude Include="Source\Component\Graphics\GraphicsLayer.h" />
