水滴の着弾エフェクトを付けた。 染み込みの色を変えた。

--- a/MyDirectXLib/Project1/Project1.vcxproj.filters
+++ b/MyDirectXLib/Project1/Project1.vcxproj.filters
@@ -84,6 +84,7 @@
     <ClCompile Include="Source\Actor\Test\TestSplatNode.cpp" />
     <ClCompile Include="Source\Actor\Test\WaterDrop.cpp" />
     <ClCompile Include="Source\Actor\Test\WaterDrop2.cpp" />
+    <ClCompile Include="Source\Actor\Test\SplashEffect.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Scene\AbstractScene.h" />
@@ -189,6 +190,7 @@
     <ClInclude Include="Source\Actor\Test\TestSplatNode.h" />
     <ClInclude Include="Source\Actor\Test\WaterDrop.h" />
     <ClInclude Include="Source\Actor\Test\WaterDrop2.h" />
+    <ClInclude Include="Source\Actor\Test\SplashEffect.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Shaders\BasicPS.hlsl" />
