--- a/MyDirectXLib/Project1/Project1.vcxproj
+++ b/MyDirectXLib/Project1/Project1.vcxproj
@@ -158,6 +158,7 @@
     </FxCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Actor\Test\SplashEffect.cpp" />
     <ClCompile Include="Source\Actor\Test\Tester.cpp" />
     <ClCompile Include="Source\Actor\Test\TestSplat.cpp" />
     <ClCompile Include="Source\Actor\Test\TestSplatNode.cpp" />
@@ -244,6 +245,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Actor\IGameMediator.h" />
+    <ClInclude Include="Source\Actor\Test\SplashEffect.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Source\Actor\Test\Tester.h" />
     <ClInclude Include="Source\Actor\Test\TestObject.h" />
     <ClInclude Include="Source\Actor\Test\TestSplat.h" />
