--- a/MyDirectXLib/Project1/Project1.vcxproj
+++ b/MyDirectXLib/Project1/Project1.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="Source\Actor\Test\TestSplatNode.cpp" />
     <ClCompile Include="Source\Actor\Test\WaterDrop.cpp" />
     <ClCompile Include="Source\Actor\Test\WaterDrop2.cpp" />
+    <ClCompile Include="Source\Actor\Test\WaterSource.cpp" />
     <ClCompile Include="Source\Component\Audio\AudioSource.cpp" />
     <ClCompile Include="Source\Component\Graphics\CustomRenderer2D.cpp" />
     <ClCompile Include="Source\Component\Graphics\MeshRenderer.cpp" />
@@ -261,6 +262,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="Source\Actor\Test\WaterDrop2.h" />
+    <ClInclude Include="Source\Actor\Test\WaterSource.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Source\Component\Audio\AudioSource.h" />
     <ClInclude Include="Source\Component\Graphics\CustomRenderer2D.h" />
     <ClInclude Include="Source\Component\Graphics\GraphicsLayer.h" />
